examples/negative/silent_contract/handle_clause_missing_resume.kai
# Silent contract (#511 audit): handler clause for `print_io`
# omits the `resume` parameter. Per docs/effects.md handler
# clauses are `op(args, resume) -> body`. Stage 2 emits the C
# code; the downstream C compiler trips on the resulting
# function-pointer mismatch. The kaikai typer should reject
# upfront. See README.

effect Io { print_io(s: String) : Unit }

fn main() : Int {
  handle {
    Io.print_io("a")
    0
  } with Io {
    print_io(s)  -> 0
    return(x)    -> x
  }
}
